Add current parameter to Rallpack 1 table.
* Minor formatting fix for equation (61).
* Add I parameter (injected current) to Rallpack 1 parameters table (Table 1).

--- a/doc/math/cable_equation/cable_equation.tex
+++ b/doc/math/cable_equation/cable_equation.tex
@@ -535,7 +535,7 @@ The membrane potential can then be expressed as
 where
 \begin{equation}
     \lambda = \sqrt{\frac{R_M d}{4 R_L}},\quad
-    \tau = R_M C_M,
+    \tau = R_M C_M,\quad
     b = L/\lambda,
 \end{equation}
 and $u(x,t)$ is given by \eqref{eq:cylseries}.
@@ -552,6 +552,7 @@ and $u(x,t)$ is given by \eqref{eq:cylseries}.
 	Membrane resistivity              & $R_M$  & \SI{4.0}{\ohm\m\squared} \\
 	Membrane specific capacitance     & $C_M$  & \SI{0.01}{\F\per\m\squared} \\
 	Membrane reversal potential       & $E_M$  & \SI{-65.0}{\mV} \\
+	Injected current                  & $I$    & \SI{0.1}{\nA} \\
         \bottomrule
     \end{tabular}
     \caption{Rallpack 1 parameters}
