Make name/variable for bulk resistivity consistent.

--- a/doc/math/cable_equation/cable_equation.tex
+++ b/doc/math/cable_equation/cable_equation.tex
@@ -548,7 +548,7 @@ and $u(x,t)$ is given by \eqref{eq:cylseries}.
         \midrule
 	Cable diameter                    & $d$    & \SI{1.0}{\um} \\
 	Cable length                      & $L$    & \SI{1.0}{\mm} \\
-	Axial resistivity                 & $R_A$  & \SI{1.0}{\ohm\m} \\
+	Bulk (axial) resistivity          & $R_L$  & \SI{1.0}{\ohm\m} \\
 	Membrane resistivity              & $R_M$  & \SI{4.0}{\ohm\m\squared} \\
 	Membrane specific capacitance     & $C_M$  & \SI{0.01}{\F\per\m\squared} \\
 	Membrane reversal potential       & $E_M$  & \SI{-65.0}{\mV} \\
